# dotfiles

./: .gitignore  LICENSE
ansible/: ansible.cfg  site.yaml
ansible/group_vars/: all
ansible/inventorys/: hosts
ansible/roles/common/files/: donghai.zsh-theme  profile  tmux.conf  zshrc
ansible/roles/common/files/nvim/: airline.vim  ctrlp.vim  easymotion.vim  general.vim  go.vim  init.vim  nerdtree.vim  solarized.vim  syntastic.vim  undotree.vim  ycm.vim
ansible/roles/common/tasks/: basic.yaml  main.yaml  neovim.yaml  tmux.yaml  vim.yaml  zsh.yaml
ansible/roles/common/templates/: vimrc
ansible/roles/development/files/: delete_merged_branchs  dhssh  ideavimrc  tmux.conf  tmuxinit  to
ansible/roles/development/tasks/: main.yaml
ansible/roles/i3wm/files/: Xresources  donghai.dark  i3wm_config  myi3status  xinitrc
ansible/roles/i3wm/tasks/: main.yaml
ansible/roles/terminal/files/: ideavimrc  vimrc
ansible/roles/terminal/tasks/: main.yaml  zsh.yaml
autokey/: CMakeLists.txt  autokey.service
autokey/src/: converter.cpp  converter.h  donghai_converter.cpp  donghai_converter.h  keyboard_device.cpp  keyboard_device.h  main.cpp  user_input_device.cpp  user_input_device.h  worker.cpp  worker.h
idea/: idea.properties  patch.sh
macos/: goto  key.txt
windows/: cygwin_startx.sh  donghai.reg  work.ahk  work2.ahk
